projet_gl/src/test/deca/context/valid/3_28/3_28_Rvalue_Float.deca
// Description:
//    Programme test si le Rvalue donne un type attendu: Float
//
// Resultats:
//    
//
// Historique:
//    cree le 09/01/2024

{
        float b = 1.336274;
}